tests/bad/field_type_undef.oc
/// fail: Could not find type with this name

struct Anything {
    a: MadeUp
}
